--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.2",
+    "@mui/x-data-grid": "^8.14.1",
     "axios": "^1.11.0",
     "countries-list": "^3.1.1",
     "react": "^19.1.1",
