--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^19.1.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^7.8.2",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
